# api/flea.swagger.json
@@ -113,6 +113,62 @@
         ]
       }
     },
+    "/v1/flea/start_task/{taskId}": {
+      "post": {
+        "operationId": "StartTask",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiStartTaskResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiStartTaskRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Flea"
+        ]
+      }
+    },
+    "/v1/flea/task/{taskId}": {
+      "get": {
+        "operationId": "GetTask",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiTaskDetails"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Flea"
+        ]
+      }
+    },
     "/v1/flea/tasks": {
       "get": {
         "operationId": "ListTasks",
@@ -163,62 +219,6 @@
             "required": false,
             "type": "boolean",
             "format": "boolean"
-          }
-        ],
-        "tags": [
-          "Flea"
-        ]
-      }
-    },
-    "/v1/start_task/{taskId}": {
-      "post": {
-        "operationId": "StartTask",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiStartTaskResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "taskId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiStartTaskRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Flea"
-        ]
-      }
-    },
-    "/v1/task/{taskId}": {
-      "get": {
-        "operationId": "GetTask",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiTaskDetails"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "taskId",
-            "in": "path",
-            "required": true,
-            "type": "string"
           }
         ],
         "tags": [
